@@ -11,6 +11,7 @@
 	+ Added error catching/displaying for ajax-loaded php scripts;
 	+ Added default language for login/requests display and new users;
 	+ Added direct links to different pages in IP address table;
+	+ Subnets can now be edited directly from nested subnets list;
 
 	Bugfixes:
 	----------------------------
